--- a/AlisverisListesi/Base.lproj/Main.storyboard
+++ b/AlisverisListesi/Base.lproj/Main.storyboard
@@ -1,24 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XQG-TT-U03">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AlisverisListesi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5db-0h-Npc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5db-0h-Npc" secondAttribute="bottom" id="1ai-cA-ewD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5db-0h-Npc" secondAttribute="trailing" id="G1K-oO-ZbH"/>
+                            <constraint firstItem="5db-0h-Npc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nrh-WE-xbF"/>
+                            <constraint firstItem="5db-0h-Npc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uWf-BE-BLk"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="olY-jx-kGy"/>
+                    <connections>
+                        <outlet property="tableView" destination="5db-0h-Npc" id="fMg-W9-qHf"/>
+                        <segue destination="Rlj-0L-utq" kind="show" identifier="toDetailsVC" id="AcL-dR-WS1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="955.07246376811599" y="65.625"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="qvr-GM-yxg">
+            <objects>
+                <viewController id="Rlj-0L-utq" customClass="DetailsViewController" customModule="AlisverisListesi" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C4d-IJ-3ai">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="GorselSec" translatesAutoresizingMaskIntoConstraints="NO" id="pPL-Rb-1ba">
+                                <rect key="frame" x="30" y="151" width="355" height="200"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Ismi" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yh5-3b-OD5">
+                                <rect key="frame" x="30" y="393" width="355" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="BEi-JT-BEw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Fiyati" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7q-jK-oRV">
+                                <rect key="frame" x="30" y="444" width="355" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="z3z-dh-hX2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Bedeni" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tng-p9-Ej8">
+                                <rect key="frame" x="30" y="496" width="355" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="9Vy-k3-qLE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ebh-8u-jjl">
+                                <rect key="frame" x="161" y="556" width="93" height="47"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="47" id="7TQ-cE-9Bs"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Kaydet"/>
+                                <connections>
+                                    <action selector="kaydetButtonClicked:" destination="Rlj-0L-utq" eventType="touchUpInside" id="vRn-Gl-EIO"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="b6M-Do-OBb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yh5-3b-OD5" firstAttribute="top" secondItem="pPL-Rb-1ba" secondAttribute="bottom" constant="42" id="1la-Ix-I62"/>
+                            <constraint firstItem="pPL-Rb-1ba" firstAttribute="trailing" secondItem="Yh5-3b-OD5" secondAttribute="trailing" id="3sp-iB-Xsh"/>
+                            <constraint firstItem="pPL-Rb-1ba" firstAttribute="top" secondItem="b6M-Do-OBb" secondAttribute="top" constant="63" id="8Tn-OI-6fo"/>
+                            <constraint firstItem="pPL-Rb-1ba" firstAttribute="leading" secondItem="b6M-Do-OBb" secondAttribute="leading" constant="30" id="Qlx-gr-HPk"/>
+                            <constraint firstItem="ebh-8u-jjl" firstAttribute="top" secondItem="Tng-p9-Ej8" secondAttribute="bottom" constant="26" id="RF7-kS-4it"/>
+                            <constraint firstItem="f7q-jK-oRV" firstAttribute="top" secondItem="Yh5-3b-OD5" secondAttribute="bottom" constant="17" id="TUT-t3-wcO"/>
+                            <constraint firstItem="ebh-8u-jjl" firstAttribute="leading" secondItem="b6M-Do-OBb" secondAttribute="leading" constant="161" id="Ywz-Ip-YPJ"/>
+                            <constraint firstItem="b6M-Do-OBb" firstAttribute="bottom" secondItem="ebh-8u-jjl" secondAttribute="bottom" constant="259" id="aD4-w0-9um"/>
+                            <constraint firstItem="pPL-Rb-1ba" firstAttribute="leading" secondItem="Yh5-3b-OD5" secondAttribute="leading" id="gjf-eR-OoI"/>
+                            <constraint firstItem="pPL-Rb-1ba" firstAttribute="centerX" secondItem="C4d-IJ-3ai" secondAttribute="centerX" id="h1Z-Rf-N4A"/>
+                            <constraint firstItem="Yh5-3b-OD5" firstAttribute="trailing" secondItem="f7q-jK-oRV" secondAttribute="trailing" id="iu7-t9-NJf"/>
+                            <constraint firstItem="f7q-jK-oRV" firstAttribute="trailing" secondItem="Tng-p9-Ej8" secondAttribute="trailing" id="jhF-Ri-myd"/>
+                            <constraint firstItem="Tng-p9-Ej8" firstAttribute="centerX" secondItem="ebh-8u-jjl" secondAttribute="centerX" id="r75-no-2Q1"/>
+                            <constraint firstItem="Tng-p9-Ej8" firstAttribute="top" secondItem="f7q-jK-oRV" secondAttribute="bottom" constant="18" id="s6V-BM-BvA"/>
+                            <constraint firstItem="f7q-jK-oRV" firstAttribute="leading" secondItem="Tng-p9-Ej8" secondAttribute="leading" id="w63-Tm-pwG"/>
+                            <constraint firstItem="Yh5-3b-OD5" firstAttribute="leading" secondItem="f7q-jK-oRV" secondAttribute="leading" id="xIK-zY-QrQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="IOH-Qh-6ed"/>
+                    <connections>
+                        <outlet property="bedenTextField" destination="Tng-p9-Ej8" id="7cI-np-UA8"/>
+                        <outlet property="fiyatTextField" destination="f7q-jK-oRV" id="95y-1d-n4C"/>
+                        <outlet property="imageView" destination="pPL-Rb-1ba" id="ZOb-Ka-UMN"/>
+                        <outlet property="isimTextField" destination="Yh5-3b-OD5" id="E5B-IZ-B41"/>
+                        <outlet property="kaydetButton" destination="ebh-8u-jjl" id="F57-xW-HEj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aGf-7W-r7B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1737.68115942029" y="65.625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yED-ov-mbl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XQG-TT-U03" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OOw-R4-gxh">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gfW-Pj-Hpc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZbR-Wk-grg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="44.927536231884062" y="65.625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="GorselSec" width="289" height="176"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
